--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "eslint-plugin-react-hooks": "^5.1.0-canary-7a2609eed-20240403",
     "react": "^18.2.0",
-    "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.23.0",
